Add title tag etc.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="output.min.css" />
+    <meta
+      name="description"
+      content="A basic demo for a basic sorting algorithm"
+    />
+    <title>Insertion sort</title>
   </head>
   <body class="mx-auto max-w-4xl p-4">
     <h1 class="mb-4 text-3xl">Insertion sort</h1>
