--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
   <body class="mx-auto max-w-4xl p-4">
     <h1 class="mb-4 text-3xl">Insertion sort</h1>
     <div class="flex flex-wrap gap-x-4">
-      <div class="number-box mb-4 rounded border border-black py-2 px-3"></div>
-      <div class="number-box mb-4 rounded border border-black py-2 px-3"></div>
-      <div class="number-box mb-4 rounded border border-black py-2 px-3"></div>
-      <div class="number-box mb-4 rounded border border-black py-2 px-3"></div>
-      <div class="number-box mb-4 rounded border border-black py-2 px-3"></div>
-      <div class="number-box mb-4 rounded border border-black py-2 px-3"></div>
-      <div class="number-box mb-4 rounded border border-black py-2 px-3"></div>
-      <div class="number-box mb-4 rounded border border-black py-2 px-3"></div>
-      <div class="number-box mb-4 rounded border border-black py-2 px-3"></div>
-      <div class="number-box mb-4 rounded border border-black py-2 px-3"></div>
+      <div class="number-box mb-4 rounded border border-black px-3 py-2"></div>
+      <div class="number-box mb-4 rounded border border-black px-3 py-2"></div>
+      <div class="number-box mb-4 rounded border border-black px-3 py-2"></div>
+      <div class="number-box mb-4 rounded border border-black px-3 py-2"></div>
+      <div class="number-box mb-4 rounded border border-black px-3 py-2"></div>
+      <div class="number-box mb-4 rounded border border-black px-3 py-2"></div>
+      <div class="number-box mb-4 rounded border border-black px-3 py-2"></div>
+      <div class="number-box mb-4 rounded border border-black px-3 py-2"></div>
+      <div class="number-box mb-4 rounded border border-black px-3 py-2"></div>
+      <div class="number-box mb-4 rounded border border-black px-3 py-2"></div>
     </div>
     <div class="mb-4 space-x-4">
-      <button class="rounded bg-blue-600 py-2 px-4 text-white" id="sort-button">
+      <button class="rounded bg-blue-600 px-4 py-2 text-white" id="sort-button">
         Sort</button
       ><button
-        class="rounded bg-gray-600 py-2 px-4 text-white"
+        class="rounded bg-gray-600 px-4 py-2 text-white"
         id="reroll-button"
       >
         Reroll
